# Modified-YOLO-with-custom-Dataset

./: .gitignore  Instruction_Readme.txt  LICENSE  README.md  models.py  object_tracker_image.py  object_tracker_video.py  pyproject.toml  sort.py  train_oid.py
config/: classes.names  coco.data  coco.names  custom_data.data  edit.cfg  test.txt  train.txt
utils/: datasets.py  utils.py
